[project]
name = "di"
version = "0.1.0"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["test_*.py"]

[tool.hatch.build.targets.wheel]
exclude = ["test_*.py"]

[tool.coverage.run]
branch = true
omit = ["*/test_*.py"]

[dependency-groups.dev]
dependencies = [
    "poethepoet>=0.33.1",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "ruff>=0.11.4",
]

[tool.poe.tasks]
lint = { sequence = ["pyright", "ruff"], help = "Run static analysis" }
test = { cmd = "pytest --cov=di --cov-report=term-missing ./", help = "Run tests with coverage" }
fmt = { cmd = "ruff format ." }
pyright = { cmd = "pyright" }
ruff = { cmd = "ruff check --fix ." }
