[project]
name = "di"
version = "0.1.0"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["test_*.py"]

[tool.hatch.build.targets.wheel]
exclude = ["test_*.py"]

[tool.coverage.run]
branch = true
omit = ["*/test_*.py"]

[dependency-groups]
dev = [
    "poethepoet>=0.33.1",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.11.4",
]

[tool.poe.tasks]
lint = { sequence = ["pyright", "ruff"], help = "Run static analysis" }
test = { cmd = "pytest --cov=di --cov-report=term-missing ./", help = "Run tests with coverage" }
fmt = { cmd = "ruff format ." }
pyright = { cmd = "pyright" }
ruff = { cmd = "ruff check --fix ." }
_uv-build = "uv build"
build = ["lint", "fmt", "test", "_uv-build"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

#[tool.ruff.lint]
#extend-select = ["ALL"]
#ignore = ["D107", "D203", "D213", "COM812", "ANN204", "PLR0911", "UP006"]
